--- a/views/pages/select.ejs
+++ b/views/pages/select.ejs
@@ -17,9 +17,9 @@
 				</div>
 				<div id='div-problem-list-filters' class='cell small-12 medium-3'>
 					<ul id='list-filter'>
-						<li><a class='select-problem-option selected' href='#'>All</a></li>
-						<li><a class='select-problem-option' href='#'>Unsolved</a></li>
-						<li><a class='select-problem-option' href='#'>Solved</a></li>
+						<li><a class='select-problem-option <% if (filter == 'a') { %> selected <% } %>' href='<%- sails.config.custom.baseUrl %>select?f=a'>All</a></li>
+						<li><a class='select-problem-option <% if (filter == 'u') { %> selected <% } %>' href='<%- sails.config.custom.baseUrl %>select?f=u'>Unsolved</a></li>
+						<li><a class='select-problem-option <% if (filter == 's') { %> selected <% } %>' href='<%- sails.config.custom.baseUrl %>select?f=s'>Solved</a></li>
 					</ul>
 				</div>
 			</div>
