--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -291,6 +291,6 @@
 			initSession();
 		});
 		</script>
-		<!-- End of application scropts-->
+		<!-- End of application scripts-->
 	</body>
 </html>
