--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -110,8 +110,11 @@
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/blockly_compressed.js"></script>
+    <script src="/js/blocks_compressed.js"></script>
     <script src="/js/clike.js"></script>
     <script src="/js/codemirror.js"></script>
+    <script src="/js/en.js"></script>
     <script src="/js/foundation.min.js"></script>
     <script src="/js/foundation.reveal.js"></script>
     <script src="/js/stretchy.js"></script>
