--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -26,6 +26,47 @@
   font-size: 12pt; }
 
 /* End of login page */
+
+/* Se;ect mode page */
+#select-mode-text {
+  font-family: 'Raleway', sans-serif; }
+
+#div-mode-select-heading {
+  margin-top: 32px;  }
+
+#div-mode-select {
+  margin-top: 16px;  }
+
+.mode-button h4 {
+  text-align: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin-top: 64px;
+  font-family: 'Raleway', sans-serif;
+  color: #ffffff;
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  box-shadow: 0px 0px 5px rgba(0,0,0,.4); }
+
+#syntax-practice-button h4 {
+  background-image: linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
+  background-image: -o-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
+  background-image: -moz-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
+  background-image: -webkit-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
+  background-image: -ms-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
+}
+
+#logic-practice-button h4 {
+  background-image: linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
+  background-image: -o-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
+  background-image: -moz-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
+  background-image: -webkit-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
+  background-image: -ms-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
+}
+/* End of select mode page */
+
 /* Select problem page */
 .menu-link, .menu-link:visited, .menu-link:active {
   color: #d0d0d0;
