Integerated abstract-level coding exercise generator.

--- a/views/pages/select.ejs
+++ b/views/pages/select.ejs
@@ -13,7 +13,7 @@
 			<!-- Problem list heading and filters -->
 			<div id='div-problem-list-heading' class='grid-x'>
 				<div class='cell small-12 medium-3 medium-offset-3'>
-					<h3 id='select-problem-text'>PROBLEMS</h4>
+					<h3 id='select-problem-text'>LOGIC PRACTICE</h4>
 				</div>
 				<div id='div-problem-list-filters' class='cell small-12 medium-3'>
 					<ul id='list-filter'>
