--- a/views/pages/syntax.ejs
+++ b/views/pages/syntax.ejs
@@ -34,18 +34,20 @@
       <div class='grid-x'>
         <!-- Problem description -->
         <div id='div-problem-description' class='cell small-12 medium-4'>
-          <h5 id='task-description-text'><%- problem.problem_id %>. <%- problem.title %></h5>
+          <h5 id='task-description-text'>Syntax Practice!</h5>
           <div id='div-task-panel'>
-            <p>Complete the function that returns the sum of two given integers <span class='code-text'>a</span> and <span class='code-text'>b</span>.</p>
+            <p><%- problem.task %></p>
             <p class='subheading'>Assumptions</p>
             <ul>
-              <li>Both <span class='code-text'>a</span> and <span class='code-text'>b</span> are in the range [0,100].</li>
+							<% for (var i = 0; i < problem.assumptions.length; i++) { %>
+              	<li><%- problem.assumptions[i]; %></li>
+							<% } %>
             </ul>
             <p class='subheading'>Sample Output</p>
             <ul>
-              <li><span class='code-text'>sum(3,5)</span> returns <span class='code-text'>8</span></li>
-              <li><span class='code-text'>sum(2,9)</span> returns <span class='code-text'>11</span></li>
-              <li><span class='code-text'>sum(50,50)</span> returns <span class='code-text'>100</span></li>
+							<% for (var i = 0; i < 3; i++) { %>
+              	<li><span class='code-text'><%- problem.method_name %>(<%- problem.test_case_inputs[i] %>)</span> returns <span class='code-text'><%- problem.test_case_outputs[i] %></span></li>
+							<% } %>
             </ul>
           </div>
         </div>
