--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -150,6 +150,37 @@
 #solved-callout a {
   float: right; }
 
+#div-guide-panel {
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  margin-bottom: 16px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  background-image: linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
+  background-image: -o-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
+  background-image: -moz-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
+  background-image: -webkit-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
+  background-image: -ms-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
+  padding: 8px 16px; }
+
+#div-guide-panel p {
+  font-weight: bold;  }
+
+#div-guide-buttons {
+  text-align: right;  }
+
+.guide-button {
+  background: #f9f9f9;
+  display: inline-block;
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  padding: 0px 8px;
+  margin-left: 16px;  }
+
+.guide-button:hover {
+  background: #ffffff; }
+
 #task-description-text {
   font-weight: bold; }
 
