--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -33,8 +33,14 @@
 			</div>
       <div class='grid-x'>
         <!-- Problem description -->
-        <div id='div-problem-description' class='cell small-12 medium-4'>
-          <h5 id='task-description-text'><%- problem.problem_id %>. <%- problem.title %></h5>
+				<div id='div-problem-description' class='cell small-12 medium-4'>
+					<!-- Guide panel -->
+					<div id='div-guide-panel'>
+						<p>You seem to be confused. Do you want a guide for this problem?</p>
+						<div id='div-guide-buttons'><a id='guide-accept-button' class='guide-button'>Yes</a><a id='guide-deny-button' class='guide-button'>Not now</a></div>
+					</div>
+					<!-- End of guide panel -->
+					<h5 id='task-description-text'><%- problem.problem_id %>. <%- problem.title %></h5>
           <div id='div-task-panel'>
             <p>Complete the function that returns the sum of two given integers <span class='code-text'>a</span> and <span class='code-text'>b</span>.</p>
             <p class='subheading'>Assumptions</p>
