--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -150,19 +150,23 @@
 #solved-callout a {
   float: right; }
 
+#div-adaptive-panel {
+  padding-left: 16px;  }
+
 #div-guide-panel {
+  display: none;
   border: 1px solid #05464f;
   border-radius: 3px;
   margin-bottom: 16px;
   -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
   -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
   box-shadow: 0px 0px 5px rgba(0,0,0,.4);
-  background-image: linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
-  background-image: -o-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
-  background-image: -moz-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
-  background-image: -webkit-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
-  background-image: -ms-linear-gradient(bottom, #f2e5b3 0%, #fff3c4 100%);
-  padding: 8px 16px; }
+  background-image: linear-gradient(bottom, #dbdbdb 0%, #e8e8e8 100%);
+  background-image: -o-linear-gradient(bottom, #dbdbdb 0%, #e8e8e8 100%);
+  background-image: -moz-linear-gradient(bottom, #dbdbdb 0%, #e8e8e8 100%);
+  background-image: -webkit-linear-gradient(bottom, #dbdbdb 0%, #e8e8e8 100%);
+  background-image: -ms-linear-gradient(bottom, #dbdbdb 0%, #e8e8e8 100%);
+  padding: 2px 8px; }
 
 #div-guide-panel p {
   font-weight: bold;  }
@@ -179,12 +183,55 @@
   margin-left: 16px;  }
 
 .guide-button:hover {
-  background: #ffffff; }
+  border: 1px solid #05464f;
+  border-radius: 3px; }
+
+#div-visualization-text-panel {
+  padding: 4px 4px;
+  min-height: 100px;
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  margin-bottom: 2px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  background-image: linear-gradient(bottom, #d7e4ed 0%, #e1ecf4 100%);
+  background-image: -o-linear-gradient(bottom, #d7e4ed 0%, #e1ecf4 100%);
+  background-image: -moz-linear-gradient(bottom, #d7e4ed 0%, #e1ecf4 100%);
+  background-image: -webkit-linear-gradient(bottom, #d7e4ed 0%, #e1ecf4 100%);
+  background-image: -ms-linear-gradient(bottom, #d7e4ed 0%, #e1ecf4 100%);
+}
+#div-visualization-text-panel p {
+  font-size: 0.9em;
+}
+
+#div-visualization-panel {
+  position: relative;
+  overflow: auto;
+  height: 375px;
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  margin-bottom: 16px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  background-image: linear-gradient(bottom, #e1e5de 0%, #ecefea 100%);
+  background-image: -o-linear-gradient(bottom, #e1e5de 0%, #ecefea 100%);
+  background-image: -moz-linear-gradient(bottom, #e1e5de 0%, #ecefea 100%);
+  background-image: -webkit-linear-gradient(bottom, #e1e5de 0%, #ecefea 100%);
+  background-image: -ms-linear-gradient(bottom, #e1e5de 0%, #ecefea 100%); }
+
+#div-visualization-panel p {
+  font-size: 0.75em;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
 
 #task-description-text {
   font-weight: bold; }
 
-#div-task-panel .code-text {
+.code-text {
   font-family: 'Source Code Pro', Courier, Sans-serif;
   font-weight: bold;
   background: #efefef;
