--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -187,6 +187,7 @@
   border-radius: 3px; }
 
 #div-visualization-text-panel {
+  display: none;
   padding: 4px 4px;
   min-height: 100px;
   border: 1px solid #05464f;
@@ -206,6 +207,7 @@
 }
 
 #div-visualization-panel {
+  display: none;
   position: relative;
   overflow: auto;
   height: 375px;
