Migrated client-side logic to separate JS file.

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -118,6 +118,7 @@
     <script src="/js/foundation.min.js"></script>
     <script src="/js/foundation.reveal.js"></script>
     <script src="/js/stretchy.js"></script>
+    <script src="/js/system.js"></script>
     <script src="/js/what-input.js"></script>
     <!--SCRIPTS END-->
   </body>
