--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -34,7 +34,13 @@
       <div class='grid-x'>
         <!-- Problem description -->
 				<div id='div-problem-description' class='cell small-12 medium-3'>
-					<h5 id='task-description-text'><%- problem.problem_id %>. <%- problem.title %></h5>
+					<h5 id='task-description-text'>
+						<% if (exercise_mode == 'syntax') { %>
+							Syntax Practice
+						<% } else { %>
+							<%- problem.problem_id %>. <%- problem.title %>
+						<% } %>
+					</h5>
 					<div id='div-task-panel'>
             <p><%- problem.task %></p>
             <p class='subheading'>Assumptions</p>
@@ -54,7 +60,7 @@
         <!-- End of problem description -->
 
 				<!-- Coding panel -->
-        <div id='div-coding-panel' class='cell small-12 medium-8'>
+        <div id='div-coding-panel' class='cell small-5 medium-4'>
 					<!-- Editor panel -->
 					<pre class='fixed-code'>int <%- problem.method_name %>(<% for (var i = 0; i < problem.argument_types.length; i++) { %><%- problem.argument_types[i] + ' ' + problem.argument_names[i] %><% if (i != problem.argument_types.length - 1) { %>,<%}%><%}%>)</pre>
           <div id='editor'>
@@ -88,7 +94,7 @@
         <!-- End of coding panel -->
 
 				<!-- Adaptive panel -->
-				<div id='div-adaptive-panel' class='cell small-12 medium-4'>
+				<div id='div-adaptive-panel' class='cell small-7 medium-5'>
 					<!-- Guide panel -->
 					<div id='div-guide-panel'>
 						<p>You seem to be confused. Do you want a guide for this problem?</p>
@@ -151,24 +157,21 @@
 		<!-- End of stretchy script -->
 
 		<!-- Mermaid script -->
-		<script src="https://unpkg.com/mermaid@7.1.0/dist/mermaid.min.js"></script>
+		<script src='https://unpkg.com/mermaid@7.1.0/dist/mermaid.min.js'></script>
 		<!-- End of Mermaid script -->
 
 		<!-- Application scripts -->
 		<script>
-		var guideTexts = {
-			A: 'To get the sum of two numbers, use the <span class=\'code-text\'>+</span> operator. You can assign the result to a variable using the <span class=\'code-text\'>=</span> operator.',
-			B: 'Use the <span class=\'code-text\'>return</span> keyword to return a value or a variable.'
-		};
-		var expandNode = function(event) {
-			var target = guideTexts[event];
-			$('#div-visualization-text-panel p').html(target);
-		}
+			data_baseUrl = '<%- sails.config.custom.baseUrl %>';
+			data_userId = '<%- user_id %>';
+			data_sessionId = '<%- session_id %>';
+			data_problemId = '<%- problem.problem_id %>';
+		</script>
+		<script src='<%- sails.config.custom.baseUrl %>js/system.js'></script>
+		<script>
 
 		$(document).ready(function() {
-			mermaid.initialize({startOnLoad:true});
-
-			<%- partial('./partials/system.ejs') %>
+			initializeSystem();
 		});
 		</script>
 		<!-- End of application scripts-->
