--- a/views/pages/partials/topbar.ejs
+++ b/views/pages/partials/topbar.ejs
@@ -2,8 +2,9 @@
 <div class="top-bar">
   <div class="top-bar-left">
     <ul class="menu">
-      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select">PROBLEMS</a></li>
-      <li><a class='menu-link' href="#">SUBMISSIONS</a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>mode">HOME</a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>syntax">SYNTAX PRACTICE</a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select">LOGIC PRACTICE</a></li>
     </ul>
   </div>
   <div class="top-bar-right">
