--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -41,7 +41,6 @@
   text-align: center;
   padding-top: 16px;
   padding-bottom: 16px;
-  margin-top: 64px;
   font-family: 'Raleway', sans-serif;
   color: #ffffff;
   border: 1px solid #05464f;
@@ -55,16 +54,53 @@
   background-image: -o-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
   background-image: -moz-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
   background-image: -webkit-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
-  background-image: -ms-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%);
-}
+  background-image: -ms-linear-gradient(bottom, #ce3f0c 0%, #ed490e 100%); }
+
+#syntax-practice-button h4:hover {
+  background-image: linear-gradient(bottom, #e84e17 0%, #ff581c 100%);
+  background-image: -o-linear-gradient(bottom, #e84e17 0%, #ff581c 100%);
+  background-image: -moz-linear-gradient(bottom, #e84e17 0%, #ff581c 100%);
+  background-image: -webkit-linear-gradient(bottom, #e84e17 0%, #ff581c 100%);
+  background-image: -ms-linear-gradient(bottom, #e84e17 0%, #ff581c 100%); }
 
 #logic-practice-button h4 {
   background-image: linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
   background-image: -o-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
   background-image: -moz-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
   background-image: -webkit-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
-  background-image: -ms-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%);
-}
+  background-image: -ms-linear-gradient(bottom, #0a61ad 0%, #137bd6 100%); }
+
+#logic-practice-button h4:hover {
+  background-image: linear-gradient(bottom, #207ac9 0%, #2385db 100%);
+  background-image: -o-linear-gradient(bottom, #207ac9 0%, #2385db 100%);
+  background-image: -moz-linear-gradient(bottom, #207ac9 0%, #2385db 100%);
+  background-image: -webkit-linear-gradient(bottom, #207ac9 0%, #2385db 100%);
+  background-image: -ms-linear-gradient(bottom, #207ac9 0%, #2385db 100%); }
+
+#div-syntax-panel {
+  background-image: linear-gradient(bottom, #efc9c9 0%, #f9d1d1 100%);
+  background-image: -o-linear-gradient(bottom, #efc9c9 0%, #f9d1d1 100%);
+  background-image: -moz-linear-gradient(bottom, #efc9c9 0%, #f9d1d1 100%);
+  background-image: -webkit-linear-gradient(bottom, #efc9c9 0%, #f9d1d1 100%);
+  background-image: -ms-linear-gradient(bottom, #efc9c9 0%, #f9d1d1 100%);  }
+
+#div-logic-panel {
+  background-image: linear-gradient(bottom, #cdedf2 0%, #d6f7fc 100%);
+  background-image: -o-linear-gradient(bottom, #cdedf2 0%, #d6f7fc 100%);
+  background-image: -moz-linear-gradient(bottom, #cdedf2 0%, #d6f7fc 100%);
+  background-image: -webkit-linear-gradient(bottom, #cdedf2 0%, #d6f7fc 100%);
+  background-image: -ms-linear-gradient(bottom, #cdedf2 0%, #d6f7fc 100%); }
+
+.mode-panel {
+  margin-bottom: 64px;
+  border: 1px solid #05464f;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.4);
+  box-shadow: 0px 0px 5px rgba(0,0,0,.4); }
+
+.mode-panel > p {
+  padding: 2px 8px; }
 /* End of select mode page */
 
 /* Select problem page */
