--- a/views/pages/select.ejs
+++ b/views/pages/select.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<!-- Page CSS -->
-		<link rel='stylesheet' href='<%- sails.config.custom.baseUrl %>styles/app.css' />
-		<!-- End of Page CSS -->
+		<%- partial('./partials/head.ejs') %>
 	</head>
 	<body>
 		<%- partial('./partials/topbar.ejs') %>
