--- a/views/pages/region.ejs
+++ b/views/pages/region.ejs
@@ -12,16 +12,16 @@
           <h4 class='region-header' class='text-center'>CODING PRACTICE WELCOME!</h4>
 				</div>
         <div id='div-region-select' class='cell small-12 medium-6 medium-offset-3'>
-					<a href='<% sails.config.custom.baseUrl %>login' id='japanese-button' class='region-button'>
+					<a href='<% sails.config.custom.baseUrl %>login/jp' id='japanese-button' class='region-button'>
 						<h4><img src='<% sails.config.custom.baseUrl %>images/lang_jp.png' />日本語</h4>
 					</a>
-					<a href='<% sails.config.custom.baseUrl %>login' id='english-button' class='region-button'>
+					<a href='<% sails.config.custom.baseUrl %>login/en' id='english-button' class='region-button'>
 						<h4><img src='<% sails.config.custom.baseUrl %>images/lang_en.png' />English</h4>
 					</a>
         </div>
         <div id='div-region-text' class='cell small-12 medium-6 medium-offset-3'>
-					<p>Note: you can only login in the region associated with your account.</p>
           <p>注意：アカウントに関連付けられた地域でのみログインできます。</p>
+					<p>Note: you can only login in the region associated with your account.</p>
         </div>
 			</div>
 		</div>
