--- a/views/pages/mode.ejs
+++ b/views/pages/mode.ejs
@@ -15,7 +15,7 @@
         </div>
 				<div id='div-mode-select' class='cell small-12 medium-6 medium-offset-3'>
 					<div id='div-syntax-panel' class='mode-panel'>
-						<a href='<% sails.config.custom.baseUrl %>syntax' id='syntax-practice-button' class='mode-button'>
+						<a href='<% sails.config.custom.baseUrl %>instructions' id='syntax-practice-button' class='mode-button'>
 							<h4><%- languagePack.syntax_practice %></h4>
 						</a>
 						<p><%- languagePack.syntax_practice_description %></p>
