--- a/views/pages/instructions.ejs
+++ b/views/pages/instructions.ejs
@@ -25,7 +25,7 @@
         <div id='div-syntax-solved-panel' class='cell small-12 medium-3 medium-offset-3'>
           <div id='container'>
             <p>Number of<br />problems<br />solved</p>
-            <h3>50</h3>
+            <h3><%- syntax_solved %></h3>
           </div>
 				</div>
         <div id='div-syntax-information-panel' class='cell small-12 medium-3'>
