Fixed generate controller.

--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -30,7 +30,7 @@
 				</div>
 				<div class='cell small-12 medium-5' id='div-problem-controls'>
 					<% if (exercise_mode == 'syntax') { %>
-						<a href='<%- sails.config.custom.baseUrl %>syntax' class='top-button green' id='top-button-2' href='#'>Next Problem</a>
+						<a href='<%- sails.config.custom.baseUrl %>generate' class='top-button green' id='top-button-2' href='#'>Next Problem</a>
 						<a href='<%- sails.config.custom.baseUrl %>mode' class='top-button' id='top-button-1' href='#'>Back to Mode Select</a>
 					<% } %>
 					<% if (exercise_mode == 'logic') { %>
