--- a/views/pages/instructions.ejs
+++ b/views/pages/instructions.ejs
@@ -13,23 +13,23 @@
 					<h3 id='syntax-practice-text' class='text-center'><%- languagePack.syntax_practice_header %></h3>
 				</div>
         <div id='div-syntax-information-panel' class='cell small-12 medium-6 medium-offset-3'>
-          <h6>INSTRUCTIONS</h6>
+          <h6><%- languagePack.instructions %></h6>
           <div id='div-syntax-instructions-panel'>
             <ul>
-              <li>Complete the functions by translating the operations into code.</li>
-              <li>The system will give you a different problem every time.</li>
-              <li>If you are stuck you can give up to get a different problem.</li>
+              <li><%- languagePack.inst_1; %></li>
+              <li><%- languagePack.inst_2; %></li>
+              <li><%- languagePack.inst_3; %></li>
             </ul>
           </div>
         </div>
         <div id='div-syntax-solved-panel' class='cell small-12 medium-3 medium-offset-3'>
           <div id='container'>
-            <p>Number of<br />problems<br />solved</p>
+            <p><%- languagePack.number_solved %></p>
             <h3><%- syntax_solved %></h3>
           </div>
 				</div>
         <div id='div-syntax-information-panel' class='cell small-12 medium-3'>
-          <a href='<%- sails.config.custom.baseUrl %>syntax'><h4 id='syntax-practice-start-button'>START!</h4></a>
+          <a href='<%- sails.config.custom.baseUrl %>syntax'><h4 id='syntax-practice-start-button'><%- languagePack.start %></h4></a>
         </div>
 			</div>
 		</div>
