Fixed loophole on syntax practice refresh after solving a problem.

--- a/views/pages/partials/topbar.ejs
+++ b/views/pages/partials/topbar.ejs
@@ -3,7 +3,7 @@
   <div class="top-bar-left">
     <ul class="menu">
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>mode"><%- languagePack.home_topbar %></a></li>
-      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>syntax"><%- languagePack.syntax_practice_topbar %></a></li>
+      <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>instructions"><%- languagePack.syntax_practice_topbar %></a></li>
       <li><a class='menu-link' href="<%- sails.config.custom.baseUrl %>select"><%- languagePack.logic_practice_topbar %></a></li>
     </ul>
   </div>
