--- a/views/pages/problem.ejs
+++ b/views/pages/problem.ejs
@@ -29,7 +29,9 @@
 					</div>
 				</div>
 				<div class='cell small-3 medium-2'>
-					<p id='solved-counter'><%- languagePack.solved_filter %>: <span id='solved-count'><%- syntax_solved %></span></p>
+					<% if (exercise_mode == 'syntax') { %>
+						<p id='solved-counter'><%- languagePack.solved_filter %>: <span id='solved-count'><%- syntax_solved %></span></p>
+					<% } %>
 				</div>
 				<div class='cell small-12 medium-5' id='div-problem-controls'>
 					<% if (exercise_mode == 'syntax') { %>
@@ -46,7 +48,7 @@
 				<div id='div-problem-description' class='cell small-12 medium-3'>
 					<h5 id='task-description-text'>
 						<% if (exercise_mode == 'syntax') { %>
-							Syntax Practice
+							Problem ID: <%- problem.problem_id %>
 						<% } else { %>
 							<%- problem.problem_id %>. <%- problem.title %>
 						<% } %>
