--- a/views/pages/partials/head.ejs
+++ b/views/pages/partials/head.ejs
@@ -1,4 +1,5 @@
 <!-- Page CSS -->
 <link rel='stylesheet' href='<%- sails.config.custom.baseUrl %>styles/app.css' />
+<link rel="icon" href="<%- sails.config.custom.baseUrl %>images/favicon.png" type="image/x-icon"/>
 <!-- End of Page CSS -->
 <title>FUN Programming Practice!</title>
